--- a/django-eskayoriadescrumy/MANIFEST.in
+++ b/django-eskayoriadescrumy/MANIFEST.in
@@ -1,4 +1,2 @@
 include LICENSE
-include README
-recursive-include eskayoriadescrumy/static *
-recursive-include eskayoriadescrumy/templates *
+include README.rst
